# cpp-like-new

./: Cargo.toml  README.md
src/: lib.rs
